--- a/BUSCADOR/buscador.html
+++ b/BUSCADOR/buscador.html
@@ -4,16 +4,22 @@
    <meta charset="UTF-8">
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <link rel="preconnect" href="https://fonts.gstatic.com">
+   <link href="https://fonts.googleapis.com/css2?family=Mulish:wght@200;400&display=swap" rel="stylesheet">
    <title>Buscador</title>
 </head>
 <style>
    body {
       margin: 0px;
       background-color: #AB88FF;
+      font-family: 'Mulish', sans-serif;
    }
    .header {
       width: 100%;
       height: 100%;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
    }
    .header__img{
       width: 200px;
@@ -21,10 +27,10 @@
       margin-left: 10px;
    }
    .header__menu {
-      margin-right: 30px;
+      margin-right: 15px;
    }
    .header__menu ul {
-      /* display: none; */
+      display: none;
       list-style: none;
       padding: 0px;
       position: absolute;
@@ -32,16 +38,38 @@
       text-align: right;
       margin: 0px 0px 0px -14px;
    }
+   .header__menu:hover ul, ul:hover{
+      display: block;
+   }
+   .header__menu li {
+      margin: 10px 0px;
+   }
+   .header__menu li a{
+      text-decoration: none;
+      color: white;
+   }
+   .header__menu li a:hover {
+      text-decoration: underline;
+   }
    .header__menu--profile {
       margin-right: 8px;
+      display: flex;
+      align-items: center;
+   }
+   .header__menu--profile img{
+      margin-right: 8px;
       width: 40px;
+   }
+   .header__menu--profile p{
+      margin: 0px;
+      color: white;
    }
 </style>
 <body>
    <header class="header">
       <img class="header__img" src="./../assets/logo-platzi-video.png" alt="Logo de Platzi Video">
       <div class="header__menu">
-         <div class="headheader__menu--profile">
+         <div class="header__menu--profile">
             <img src="./../assets/user-icon.png" alt="Ícono de Usuario">
             <p>Perfil</p>
          </div>
