--- a/CARROUSEL/carrousel-1.html
+++ b/CARROUSEL/carrousel-1.html
@@ -27,7 +27,7 @@
       /* Padding de 10px para evitar que se nos corte el elemento cuando hagamos hover */
       padding-bottom: 10px;
    }
-   .carousel__item {
+   .carousel-item {
       background-color: palevioletred;
       width: 200px;
       height: 250px;
@@ -42,35 +42,66 @@
       transition: 450ms all;
       /* para que no se salga(center) y para que empiece de izquierda a derecha(left) */
       transform-origin: center left;
+      /* para que los hijos con absolute estén en este relativo */
+      position: relative;
    }
    /* Aquí desplazamos los elementos hacia la derecha */
    /* ~ = Selecciona todos los elementos excepto el elemento que está seleccionado */
-   .carousel__item:hover ~ .carousel__item{
+   .carousel-item:hover ~ .carousel-item{
       transform: translate3d(100px, 0, 0);
    }
-   .carousel__container:hover .carousel__item {
+   .carousel__container:hover .carousel-item {
       /* cuando hagamos hover al container los items pierden opacidad */
       opacity: 0.3;
    }
-   .carousel__container:hover .carousel__item:hover {
+   .carousel__container:hover .carousel-item:hover {
       /* cuando hagamos hover al container luego hagamos hover a un item(elemento específico) */
       /* este único item regresa su opacidad */
       transform: scale(1.5);
       opacity: 1;
    }
+   .carousel-item__img {
+      /* Copiamos los mismos que teniamos en su padre item para que esté justo */
+      width: 200px;
+      height: 250px;
+      /* para que la imgen recupere su tamaño original */
+      object-fit: cover;
+   }
+   .carousel-item__details {
+      /* colocamos un color gradiente desde 0% al 100 % de arriba hacia abajo */
+      background: linear-gradient(to top, rgba(0, 0, 0, 0.9) 0%, rgba(0, 0, 0, 0) 100%);
+      font-size: 10px;
+      /* Opacidad a los detalles */
+      opacity: 0;
+      /* transition para que aparezca paulatinamente */
+      transition: 450ms opacity;
+      /* padding para que los textos no nos aparezcan juntos */
+      padding: 10px;
+      /* colocamos obsolute por que el padre "carousel-item" es position relative */
+      /* con absolute ya podemos empezar a moverlos con top, left, right, bottom */
+      position: absolute;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
+   }
 </style>
 <body>
    <section class="carousel">
       <div class="carousel__container">
-         <div class="carousel__item">
+         <div class="carousel-item">
+            <img class="carousel-item__img" src="https://images.pexels.com/photos/7165100/pexels-photo-7165100.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260" alt="Imagen de una persona parada">
+            <div class="carousel-item__details">
+               <div>
+                  <img src="./../assets/play-icon.png" alt="Play">
+                  <img src="./../assets/plus-icon.png" alt="Plus">
+               </div>
+               <p class="carousel-item__details--title">Título descriptivo</p>
+               <p class="carousel-item__details--subtitle">2019 16+ 114 minutos</p>
+            </div>
          </div>
-         <div class="carousel__item">
-         </div>
-         <div class="carousel__item">
-         </div>
-         <div class="carousel__item">
-         </div>
-         <div class="carousel__item">
+
+         <div class="carousel-item">
          </div>
       </div>
    </section>
