solucionando temas de comentarios

--- a/CARROUSEL/carrousel-1.html
+++ b/CARROUSEL/carrousel-1.html
@@ -80,13 +80,16 @@
       /* colocamos obsolute por que el padre "carousel-item" es position relative */
       /* con absolute ya podemos empezar a moverlos con top, left, right, bottom */
       position: absolute;
+      /* Con lo de abajo hacemos que los details estén en la parte final de item */
       top: 1;
       left: 0;
       right: 0;
       bottom: 0;
+      /* Con esto hacemos que la información de los details estén en color blanco */
       color: white;
    }
    .carousel-item__details img {
+      /* el tamaño de las imágenes lo mejoramos */
       width: 30px;
    }
    .carousel-item:hover .carousel-item__details {
